--- a/zines.html
+++ b/zines.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>this is it. hello, this is it.</TITLE>
+<TITLE>ZINES!!!</TITLE>
 <link rel="icon" type="image/x-icon" href="rbt.ico">
 <STYLE>
         header {
@@ -64,20 +64,14 @@
 <hr>
 
 
-<ti>11.10.2025 ► newest awesomest time wasting magazine ever coming soon to a free library near you</ti> 
+<ti>11.10.2025 ► SOMETHING SOMETHING MAGAZINE : ISSUE ZERO</ti> 
 <p>
-first issue of <b>SOMETHING SOMETHING MAGAZINE</b> is up! this was souper fun to make so i'll probably do more, which will be posted to this site</p>
-
-<FONT COLOR=GREY>(btw you can click the images to go to the zines page)
-
-<br><br> 
-<a href="zines.html" style="text-decoration: none">
-				<img SRC="SSM-IS0-PG1.png" HEIGHT=450>
-</a>
-<a href="zines.html" style="text-decoration: none">
-				<img SRC="SSM-IS0-PG4.png" HEIGHT=450>
-</a>
-
+<IMG SRC="SSM-IS0-PG1.png" HEIGHT=450>
+<IMG SRC="SSM-IS0-PG2.png" HEIGHT=450>
+<IMG SRC="SSM-IS0-PG3.png" HEIGHT=450>
+<IMG SRC="SSM-IS0-PG4.png" HEIGHT=450>
+<IMG SRC="SSM-IS0-PG5.png" HEIGHT=450>
+<IMG SRC="SSM-IS0-PG6.png" HEIGHT=450>
 </p>
 
 <br>
