update, added ABOUT.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>this is it. hello, this is it.</TITLE>
+<TITLE>ABOUT???</TITLE>
 <link rel="icon" type="image/x-icon" href="rbt.ico">
 <STYLE>
         header {
@@ -67,27 +67,22 @@
 <hr>
 
 
-<ti>11.10.2025 ► newest awesomest time wasting magazine ever coming soon to a free library near you</ti> 
+<ti>11.10.2025 ► what's the big idea?</ti> 
 <p>
-first issue of <b>SOMETHING SOMETHING MAGAZINE</b> is up! this was souper fun to make so i'll probably do more, which will be posted to this site</p>
+this is drowntown.net, like, the website you <b>are on right now</b>
 
-<FONT COLOR=GREY>(btw you can click the images to go to the zines page)
-
-<br><br> 
-<a href="zines.html" style="text-decoration: none">
-				<img SRC="SSM-IS0-PG1.png" HEIGHT=450>
-</a>
-<a href="zines.html" style="text-decoration: none">
-				<img SRC="SSM-IS0-PG4.png" HEIGHT=450>
-</a>
-
+<br><br>
+for questions comments and whatever please email <a href="mailto:angel@drowntown.net">angel@drowntown.net</a>
+ or message me on discord if you have my tag
+<br><br>
+otherwise like, have fun! this site gets updated semi regularly with random shit!!
 </p>
 
-<br>
+<br><br><br><br><br><br><br><br>
 
 
 </BODY>
-<br>
+<br><br><br><br><br>
 <p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence. everything changes here, and in a way it's always the same.
 
 <br><br>
