--- a/zines.html
+++ b/zines.html
@@ -56,7 +56,10 @@
 <a href="zines.html" style="text-decoration: none">
 				<img SRC="ZINES.png" HEIGHT=70>
 </a>
-<a href="mailto:casey@drowntown.net" style="text-decoration: none">
+<a href="about.html" style="text-decoration: none">
+				<img SRC="ABOUT.png" HEIGHT=70>
+</a>
+<a href="mailto:angel@drowntown.net" style="text-decoration: none">
 				<img SRC="EMAIL.png" HEIGHT=70>
 </a>
 			
@@ -81,7 +84,10 @@
 <br><br><br><br><br>
 <p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence. everything changes here, and in a way it's always the same.
 
-<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved.
+<br><br>
+hosting <b>SOMETHING SOMETHING MAGAZINE</b><br>asleep at the wheel since 2025
+
+<br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved.
 
 </FONT>
 </p>
