--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 <a href="index.html" style="text-decoration: none">
 				<img SRC="HOME.png" HEIGHT=70>
 </a>
+<a href="music.html" style="text-decoration: none">
+				<img SRC="MUSIC.png" HEIGHT=70>
+</a>
 <a href="zines.html" style="text-decoration: none">
 				<img SRC="ZINES.png" HEIGHT=70>
 </a>
@@ -61,11 +64,18 @@
 </a>
 <a href="mailto:angel@drowntown.net" style="text-decoration: none">
 				<img SRC="EMAIL.png" HEIGHT=70>
-</a>
-			
+</a>	
 </header>
 <hr>
 
+<ti>11.11.2025 ► also like hi site update</ti> 
+<p>
+drowntown.net changes once again.. 
+<br><br>
+added tabs for <a href="music.html">my music</a> and <a href="zines.html">my zines</a>, also a button if you wanted to email me. if anybody out there actually emails i'd like to do a page for <b>YR EMAILS!</b> where i'll answer questions or just put up whatever stuff you people out in the ether send me. on the topic of music, tapes (maybe CDs) will be available after i finish the material i'm working on and get it all recorded, also cheap ass (3 dollar??) patches and random DIY junk will go up for sale because i like when artists do that so i'm gonna do it too
+<br><br>
+also come on, i know you aren't reading this LMFAO
+</p> <br>
 
 <ti>11.10.2025 ► newest awesomest time wasting magazine ever coming soon to a free library near you</ti> 
 <p>
