--- a/music.html
+++ b/music.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>ABOUT???</TITLE>
+<TITLE>MUSIC?!?!?</TITLE>
 <link rel="icon" type="image/x-icon" href="rbt.ico">
 <STYLE>
         header {
@@ -68,23 +68,14 @@
 </header>
 <hr>
 
-
-<ti>11.10.2025 ► what's the big idea?</ti> 
-<p>
-this is drowntown.net, like, the website you <b>are on right now</b>
-
-<br><br>
-for questions comments and whatever please email <a href="mailto:angel@drowntown.net">angel@drowntown.net</a>
- or message me on discord if you have my tag
-<br><br>
-otherwise like, have fun! this site gets updated semi regularly with random shit!!
+<center>
+<p><FONT COLOR=GREY>
+<IMG SRC="music_placeholder.png" HEIGHT=600>
 </p>
 
-<br><br><br><br><br><br><br><br>
 
 
 </BODY>
-<br><br><br><br><br>
 <p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence. everything changes here, and in a way it's always the same.
 
 <br><br>
