--- a/zines.html
+++ b/zines.html
@@ -53,6 +53,9 @@
 <a href="index.html" style="text-decoration: none">
 				<img SRC="HOME.png" HEIGHT=70>
 </a>
+<a href="music.html" style="text-decoration: none">
+				<img SRC="MUSIC.png" HEIGHT=70>
+</a>
 <a href="zines.html" style="text-decoration: none">
 				<img SRC="ZINES.png" HEIGHT=70>
 </a>
@@ -61,8 +64,7 @@
 </a>
 <a href="mailto:angel@drowntown.net" style="text-decoration: none">
 				<img SRC="EMAIL.png" HEIGHT=70>
-</a>
-			
+</a>	
 </header>
 <hr>
 
